--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -3761,8 +3761,7 @@ input[type="submit"].btn.btn-mini {
 .alert {
   padding: 8px 35px 8px 14px;
   margin-bottom: 20px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  background-color: #fcf8e3;
+  background-color: #F39C12;
   border: 1px solid #fbeed5;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
@@ -3771,7 +3770,7 @@ input[type="submit"].btn.btn-mini {
 
 .alert,
 .alert h4 {
-  color: #c09853;
+  color: #fff;
 }
 
 .alert h4 {
@@ -3786,8 +3785,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .alert-success {
-  color: #468847;
-  background-color: #dff0d8;
+  background-color: #27AE60;
   border-color: #d6e9c6;
 }
 
@@ -3797,8 +3795,7 @@ input[type="submit"].btn.btn-mini {
 
 .alert-danger,
 .alert-error {
-  color: #b94a48;
-  background-color: #f2dede;
+  background-color: #E74C3C;
   border-color: #eed3d7;
 }
 
@@ -3808,8 +3805,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .alert-info {
-  color: #3a87ad;
-  background-color: #d9edf7;
+  background-color: #2980B9;
   border-color: #bce8f1;
 }
 
